manifests/applications/monitoring/namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    openshift.io/display-name: "Operate First's Monitoring"
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
  name: op1st-monitoring
