manifests/applications/monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.allow-http: "false"
  name: grafana
spec:
  rules:
    - host: monitoring.b4mad.emea.operate-first.cloud
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: grafana-service
                port:
                  number: 3000
  tls:
    - hosts:
        - monitoring.b4mad.emea.operate-first.cloud
      secretName: https-cert-monitoring.b4mad.emea.operate-first.cloud
